--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "BonaNova";
+  src: url("./fonts/BonaNova.ttf");
+}
+
+.bn {
+  font-family: BonaNova;
+}
